# dev-idf

./: .gitlab-ci.yml  CMakeLists.txt  Kconfig  sdkconfig.rename
components/bootloader_support/src/: bootloader_common_loader.c
components/driver/: rtc_io.c
components/driver/test/: test_ledc.c
components/efuse/esp32c2/: esp_efuse_utility.c
components/efuse/esp32c3/: esp_efuse_utility.c
components/efuse/esp32s2/: esp_efuse_utility.c
components/efuse/esp32s3/: esp_efuse_utility.c
components/esp_rom/esp32s2/: usb_descriptors.c
components/esp_system/port/: cpu_start.c
components/esp_system/port/soc/esp32/: clk.c
components/esp_system/port/soc/esp32c2/: clk.c
components/esp_system/port/soc/esp32c3/: clk.c
components/esp_system/port/soc/esp32h2/: clk.c
components/esp_system/port/soc/esp32s2/: clk.c
components/esp_system/port/soc/esp32s3/: clk.c
components/espcoredump/src/port/xtensa/: core_dump_port.c
components/hal/: sdio_slave_hal.c
components/nvs_flash/src/: nvs_storage.cpp
components/ulp/cmake/: toolchain-esp32s3-ulp.cmake
components/ulp/ulp_riscv/: ulp_riscv.c
docs/en/api-guides/: linker-script-generation.rst
examples/bluetooth/bluedroid/ble_50/multi-adv/: sdkconfig.defaults
examples/bluetooth/blufi/: sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
examples/bluetooth/esp_ble_mesh/common_components/fast_provisioning/: CMakeLists.txt
tools/: idf_size.py  toolchain_versions.mk  tools.json
tools/ci/: check_copyright_ignore.txt
tools/cmake/: build.cmake
tools/test_idf_tools/: test_idf_tools.py
(+17 files in other folders)
